Add different sources for stock menu
